--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SCSS and Gulp Boilerplate</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Rebirth of Redit</title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+  <button id="dataBtn">Get Customized Reddit</button>
+  <div id="container">
+  </div>
+
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
