adds input for users to perform their own search

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+  <input id="userInput" placeholder="Search" type="text"></input>
   <button id="dataBtn">Get Customized Reddit</button>
   <div id="container">
   </div>
