--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+<div class="jumbotron">
+  <div class="container">
+  <button>Click Here!</button>
+  </div>
+</div>
   <header id="header"></header>
   <input id="userInput" placeholder="Search" type="text"></input>
   <button id="dataBtn">Get Customized Reddit</button>
